{
    "name": "DeleteObjectInput",
    "maps": [
        {
            "name": "Delete Object",
            "id": "09fc4aa0-039a-4246-b923-2423ad6336fc",
            "actions": [
                {
                    "name": "Delete Object",
                    "type": "Button",
                    "id": "a2484a55-7ef1-48bb-bfe8-ad4445be8df8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec4d802d-bd7c-43e7-8223-a7b10319eae9",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete Object",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}